feat: aria-hidden to all generic divs and better <meta>

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Gaina Dan-Lucian" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Provides web development related information and best practices in form of mini-tests. You can chose from a variety of topics and a custom randomized test will be created for you. Also you will be provided with links to resources where you can learn more."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -23,6 +24,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <main id="root"></main>
+    <div aria-hidden="true" id="root"></div>
   </body>
 </html>
