--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div aria-hidden="true" id="root"></div>
+    <div id="root"></div>
   </body>
 </html>
