--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
 
-    <title>Webdev tests</title>
+    <title>Webdev test</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
